@@ -54,4 +54,30 @@ class ContactField extends Model
     {
         return $value;
     }
+
+    /**
+     * Scope a query to only include contact field of email type.
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder $query
+     * @return \Illuminate\Database\Eloquent\Builder
+     */
+    public function scopeEmail($query)
+    {
+        return $query->whereHas('contactFieldType', function ($query) {
+            $query->where('type', '=', ContactFieldType::EMAIL);
+        });
+    }
+
+    /**
+     * Scope a query to only include contact field of phone type.
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder $query
+     * @return \Illuminate\Database\Eloquent\Builder
+     */
+    public function scopePhone($query)
+    {
+        return $query->whereHas('contactFieldType', function ($query) {
+            $query->where('type', '=', ContactFieldType::PHONE);
+        });
+    }
 }
